...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Medications" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" id="oJ9-rO-oaB">
                                            <rect key="frame" x="16" y="0.0" width="343" height="52"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                                <rect key="frame" x="78" y="20" width="274" height="30"/>
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" hint="The value in this field will be used as the name of this medication. This is a required field." identifier="medication name" label="medication name"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <rect key="frame" x="143" y="110" width="177" height="30"/>
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" hint="Brings up a dialog to set the date that you started taking this medication. This is an optional field." identifier="set started on button" label="set started on button"/>
                                                <state key="normal" title="Not set"/>
                                                <connections>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                <accessibility key="accessibilityConfiguration" hint="Records any notes about this medication." identifier="notes" label="notes"/>
                                                <color key="textColor" systemColor="labelColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="122" y="148" width="230" height="30"/>
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="medication dosage" label="medication dosage">
                                                    <string key="hint">The value in this text field will be used as the default dosage when marking this medication as taken. This is an optional field.</string>
                                                </accessibility>
...
                                                <rect key="frame" x="143" y="72" width="177" height="30"/>
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" hint="Brings up a dialog to set how frequently this medication is supposed to be taken." identifier="set frequency button" label="set frequency button"/>
                                                <state key="normal" title="As needed"/>
                                                <connections>
...
                                                <rect key="frame" x="328" y="72" width="27" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" hint="This will remove the frequency  from this medication." identifier="clear frequency button" label="clear frequency button"/>
                                                <state key="normal" title="x"/>
                                                <connections>
...
                                                <rect key="frame" x="328" y="110" width="27" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" hint="This will remove the started on date from this medication." identifier="clear started on date button" label="clear started on date button"/>
                                                <state key="normal" title="x"/>
                                                <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save dose button" label="save dose button"/>
                                <state key="normal" title="Sort">
                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
...
        <scene sceneID="Kiu-Iy-IFB">
            <objects>
                <navigationController storyboardIdentifier="recordData" title="Record" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="81h-K0-B6G" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Record" image="hand-with-pen" id="AT6-Qk-6Ny"/>
                    <toolbarItems/>
...
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save dose button" label="save dose button"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
                                </state>
...
                                <rect key="frame" x="88" y="51" width="196" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" hint="Specify the dosage being taken" identifier="dosage taken text field" label="dosage taken text field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
...
