...
		)
		sortButton = barButton(title: "⇅", action: #selector(sortButtonPressed))
		navigationItem.rightBarButtonItems = [addButton, sortButton]

		searchController.searchResultsUpdater = self
		searchController.obscuresBackgroundDuringPresentation = false
		searchController.searchBar.placeholder = "Search Medications"
		searchController.hidesNavigationBarDuringPresentation = false
		navigationItem.searchController = searchController
		navigationItem.hidesSearchBarWhenScrolling = false
		definesPresentationContext = true

		loadMedications()
...
		if currentSort != nil {
			actionsController.addAction(getUseDefaultSortAction())
		}
		actionsController.addAction(getEditDefaultSortAction())
		actionsController.addAction(getSortByRecentCountAction())
		actionsController.addAction(injected(UiUtil.self).alertAction(
			title: "Cancel",
			style: .cancel,
			handler: nil
		))
		present(actionsController, animated: false, completion: nil)
	}

...
			style: .default,
			handler: { _ in self.presentSortByRecentCountOptions() }
		)
	}

	private final func getDeleteAction(for indexPath: IndexPath) -> UIContextualAction {
		injected(UiUtil.self).contextualAction(style: .destructive, title: "🗑️") { _, _, completion in
			let medication = self.fetchedResultsController.object(at: indexPath)
			let alert = UIAlertController(
				title: "Are you sure you want to delete \(medication.name)?",
				message: "This will delete all history for this medication.",
				preferredStyle: .alert
			)
			alert.addAction(UIAlertAction(title: "Yes", style: .destructive) { _ in
				do {
					let transaction = injected(Database.self).transaction()
					try transaction.delete(medication)
					try retryOnFail({ try transaction.commit() }, maxRetries: 2)
					self.loadMedications()
				} catch {
...
