...
	public override func viewDidLoad() {
		super.viewDidLoad()

		tableView.rowHeight = UITableView.automaticDimension
		tableView.estimatedRowHeight = 88

		dateRangeButton.accessibilityLabel = "filter dates button"

		observe(selector: #selector(dateRangeSet), name: Me.dateRangeSet)
		observe(selector: #selector(enabledDataTypesChanged), name: Me.enabledDataTypesChanged)
		observe(selector: #selector(persistenceLayerDidRefresh), name: .persistenceLayerDidRefresh)
		observe(selector: #selector(persistenceLayerWillRefresh), name: .persistenceLayerWillRefresh)
		observe(selector: #selector(sampleChanged), name: Me.sampleChanged)

		let chooseDataTypesButton = barButton(title: "☑️ Data Types", action: #selector(chooseDataTypesButtonPressed))
		navigationItem.rightBarButtonItem = chooseDataTypesButton

		injected(UiUtil.self).setBackButton(
			for: self,
			title: navigationItem.backBarButtonItem?.title ?? "Back",
			action: #selector(goBack)
		)

		updatePreviousAndNextButtons()

		resetDateRangeButtonTitle()
...
